@startuml

title __COMPONENT's Class Diagram__\n

  package org.pmesmeur.sketchit {
    package org.pmesmeur.sketchit.diagram {
      package org.pmesmeur.sketchit.diagram.component {
        class ComponentDiagramGenerator {
            - project : Project
            - patternsToExclude : List<String>
            - managedModules : Set<Module>
            - title : String
            {static} + newBuilder()
            # ComponentDiagramGenerator()
            - computeManagedModuleList()
            - excluded()
            - excluded()
            + generate()
            - getListOfManagedModulesOrderedAlphabetically()
            - printModuleDependencies()
            - getNamesOfDependentModules()
        }
      }
    }
  }
  

  package org.pmesmeur.sketchit {
    package org.pmesmeur.sketchit.diagram {
      package org.pmesmeur.sketchit.diagram.component {
        class Builder {
            - project : Project
            - patternsToExclude : List<String>
            - title : String
            + Builder()
            + exclude()
            + build()
            + title()
        }
      }
    }
  }
  

  package org.pmesmeur.sketchit {
    package org.pmesmeur.sketchit.diagram {
      package org.pmesmeur.sketchit.diagram.component {
        class ModuleComparator {
            + compare()
        }
      }
    }
  }
  

  package org.pmesmeur.sketchit {
    package org.pmesmeur.sketchit.diagram {
      package org.pmesmeur.sketchit.diagram.component {
        class ModulesHierarchyGenerator {
            - modulePaths : List<ModulePath>
            ~ modulePathsDone : Set<ModulePath>
            + ModulesHierarchyGenerator()
            - buildModulePaths()
            - buildModulePathsDependencies()
            + generate()
            - generate()
        }
      }
    }
  }
  

  package org.pmesmeur.sketchit {
    package org.pmesmeur.sketchit.diagram {
      package org.pmesmeur.sketchit.diagram.component {
        class ModulePath {
            - module : Module
            - path : String
            + subModules : ArrayList<ModulePath>
            - ModulePath()
            - getModuleFilePath()
        }
      }
    }
  }
  

  package org.pmesmeur.sketchit {
    package org.pmesmeur.sketchit.diagram {
      package org.pmesmeur.sketchit.diagram.component {
        class ModulePathComparator {
            + compare()
        }
      }
    }
  }
  

  ComponentDiagramGenerator o-- PlantUmlWriter : plantUmlWriter
  ComponentDiagramGenerator +-down- Builder
  ComponentDiagramGenerator +-down- ModuleComparator
  Builder o-- PlantUmlWriter : plantUmlWriter
  ModuleComparator -up-|> Comparator
  ModulesHierarchyGenerator +-down- ModulePath
  ModulesHierarchyGenerator +-down- ModulePathComparator
  ModulePathComparator -up-|> Comparator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
